/*
 * $Id: ChangeLog,v 1.2678 2004/03/29 21:20:57 srobert Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-30 09:05 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbf1.c
    ! small modification to hb_dbfOpen() to launch error only when hb_fsError()
      is not zero. This modification allows xHarbour behaves as Clipper when
      trying to open a file already opened exclusively by another application.
      Bug reported by: <elcio@gecont.com.br>

      .--
      |  // Test program:
      |  PROCEDURE MAIN()
      |
      |  USE Test EXCLUSIVE NEW
      |  WHILE( NetErr() )
      |    ? 'Looping while cannot open exclusively!'
      |    USE Test EXCLUSIVE NEW
      |  ENDDO
      |  Alert( 'File Is Being Opened Exclusively!' )
      |
      |  Test->( dbCloseArea() )
      |  RETURN
      |
      |  // How to make a test:
      |  // 1. Run the EXE once and do not close the alert box
      |  // 2. Run another instance -> loop is now honored. Previously,
      |  //    error trapper is launched.
      `--

2004-03-29 16:16 UTC-0500 Sylvain Robert (s.robert/at/videotron.ca)
  * source\rtl\str.c
    ! str() should not follow SET FIXED rules (Clipper compatibility)
    Ex: ? STR(3) now return 3 as in Clipper
    ! if pWidth - (pDec+1) ==0 return '*' equal to pWidth (Clipper
      compatibility)
    Ex: ? STR(3,7,6) now return ******* as in Clipper

2004-03-29 10:13 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/error.ch
    + Added #define HB_EI_PREMATURE_RELEASE 9027 /* "Premature Array/Object Release detected" */

  * include/hbapi.h
  * source/vm/arrays.c
    + Added support for new define HB_ARRAY_COUNTER_DEFAULT_HOLDERS (default 1)
      /*
        This allows to set an HIGHER number to experience memory impact of GC only arrays